Added the token to allow pushing to the openhue/homebrew-cli repo

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -43,6 +43,7 @@ brews:
     repository:
       owner: openhue
       name: homebrew-cli
+      token: "{{ .Env.OPENHUE_HOMEBREW_CLI_TOKEN }}"
 
 archives:
   - id: openhue
