Inject the OPENHUE_HOMEBREW_CLI_TOKEN as a GoReleaser env variable

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,3 +39,4 @@ jobs:
           args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          OPENHUE_HOMEBREW_CLI_TOKEN: ${{ secrets.OPENHUE_HOMEBREW_CLI_TOKEN }}
