Fixed config setup when file already exists

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -30,8 +30,10 @@ dockers:
       - "--pull"
       - "--label=org.opencontainers.image.created={{.Date}}"
       - "--label=org.opencontainers.image.title={{.ProjectName}}"
+      - "--label=org.opencontainers.image.description={{.ProjectName}}"
       - "--label=org.opencontainers.image.revision={{.FullCommit}}"
       - "--label=org.opencontainers.image.version={{.Version}}"
+      - "--label=org.opencontainers.image.url=https://github.com/openhue/openhue-cli"
 
 brews:
   - name: openhue-cli
