--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,9 @@ jobs:
         with:
           go-version: '1.21'
 
+      - name: Run the tests
+        run: make test
+
       - name: Install GoReleaser
         uses: goreleaser/goreleaser-action@v5
         with:
