--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ fabric.properties
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+coverage.html
 
 # Go workspace file
 go.work
