--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -6,4 +6,4 @@ plugins:
 
 # We don't want the scan and analyze generated code
 exclude_patterns:
-  - openhue/gen/openhue.gen.go
+  - openhue/gen/openhue.openhue.go
